crates/pg_syntax/tests/snapshots/postgres_regress/brin@20.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT brin_desummarize_range('brinidx', 0);"
---
SelectStmt@0..44
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..42
    FuncCall@7..42
      Ident@7..29 "brin_desummarize_range"
      Ascii40@29..30 "("
      AConst@30..39
        Sconst@30..39 "'brinidx'"
      Ascii44@39..40 ","
      Whitespace@40..41 " "
      AConst@41..42
        Iconst@41..42 "0"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

