crates/pg_syntax/tests/snapshots/postgres_regress/brin@21.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT brin_desummarize_range('brinidx', 100000000);"
---
SelectStmt@0..52
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..50
    FuncCall@7..50
      Ident@7..29 "brin_desummarize_range"
      Ascii40@29..30 "("
      AConst@30..39
        Sconst@30..39 "'brinidx'"
      Ascii44@39..40 ","
      Whitespace@40..41 " "
      AConst@41..50
        Iconst@41..50 "100000000"
  Ascii41@50..51 ")"
  Ascii59@51..52 ";"

