crates/pg_syntax/tests/snapshots/postgres_regress/brin@23.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX brin_summarize_idx ON brin_summarize USING brin (value) WITH (pages_per_range=2);
---
IndexStmt@0..94
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..31 "brin_summarize_idx"
  Whitespace@31..32 " "
  On@32..34 "ON"
  Whitespace@34..35 " "
  RangeVar@35..49
    Ident@35..49 "brin_summarize"
  Whitespace@49..50 " "
  Using@50..55 "USING"
  Whitespace@55..56 " "
  Ident@56..60 "brin"
  Whitespace@60..61 " "
  Ascii40@61..62 "("
  IndexElem@62..67
    ValueP@62..67 "value"
  Ascii41@67..68 ")"
  Whitespace@68..69 " "
  With@69..73 "WITH"
  Whitespace@73..74 " "
  Ascii40@74..75 "("
  DefElem@75..92
    Ident@75..90 "pages_per_range"
    Ascii61@90..91 "="
    Iconst@91..92 "2"
  Ascii41@92..93 ")"
  Ascii59@93..94 ";"

