crates/pg_syntax/tests/snapshots/postgres_regress/brin@30.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT brin_summarize_range('brin_summarize_idx', 4294967296);"
---
SelectStmt@0..62
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..60
    FuncCall@7..60
      Ident@7..27 "brin_summarize_range"
      Ascii40@27..28 "("
      AConst@28..48
        Sconst@28..48 "'brin_summarize_idx'"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      AConst@50..60
        Fconst@50..60 "4294967296"
  Ascii41@60..61 ")"
  Ascii59@61..62 ";"

