crates/pg_syntax/tests/snapshots/postgres_regress/brin@33.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO brintest_2 VALUES ('empty');"
---
InsertStmt@0..40
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "brintest_2"
  Whitespace@22..23 " "
  SelectStmt@23..38
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..38
      AConst@31..38
        Sconst@31..38 "'empty'"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

