crates/pg_syntax/tests/snapshots/postgres_regress/brin@34.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO brintest_2 VALUES (numrange(0, 2^1000::numeric));"
---
InsertStmt@0..61
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "brintest_2"
  Whitespace@22..23 " "
  SelectStmt@23..58
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..58
      FuncCall@31..58
        Ident@31..39 "numrange"
        Ascii40@39..40 "("
        AConst@40..41
          Iconst@40..41 "0"
        Ascii44@41..42 ","
        Whitespace@42..43 " "
        AExpr@43..58
          AConst@43..44
            Iconst@43..44 "2"
          Ascii94@44..45 "^"
          TypeCast@45..58
            AConst@45..49
              Iconst@45..49 "1000"
            Typecast@49..51 "::"
            TypeName@51..58
              Numeric@51..58 "numeric"
  Ascii41@58..59 ")"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

