crates/pg_syntax/tests/snapshots/postgres_regress/brin@35.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO brintest_2 VALUES ('(-1, 0)');"
---
InsertStmt@0..42
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "brintest_2"
  Whitespace@22..23 " "
  SelectStmt@23..40
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..40
      AConst@31..40
        Sconst@31..40 "'(-1, 0)'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

