crates/pg_syntax/tests/snapshots/postgres_regress/brin@37.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT brin_summarize_range('brinidx', 0);"
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..40
    FuncCall@7..40
      Ident@7..27 "brin_summarize_range"
      Ascii40@27..28 "("
      AConst@28..37
        Sconst@28..37 "'brinidx'"
      Ascii44@37..38 ","
      Whitespace@38..39 " "
      AConst@39..40
        Iconst@39..40 "0"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

